--- a/todo-app/todo-frontend/docker-compose.dev.yml
+++ b/todo-app/todo-frontend/docker-compose.dev.yml
@@ -9,3 +9,7 @@ services:
     ports:
       - 3000:3000
     container_name: todo-frontend-dev
+    environment:
+        REACT_APP_BACKEND_URL: http://localhost:4004
+  debug-helper:
+    image: busybox
