--- a/todo-app/todo-backend/Dockerfile
+++ b/todo-app/todo-backend/Dockerfile
@@ -4,10 +4,11 @@ USER node
 
 WORKDIR /home/node
 
+COPY --chown=node:node ./package.json ./package.json
+COPY --chown=node:node ./package-lock.json ./package-lock.json
+
+RUN npm ci --only-production
+
 COPY --chown=node:node . .
-
-RUN npm ci
-
-ENV PORT=4000
 
 CMD ["npm", "start"]
